# nekopas2rust-macros

./: Cargo.toml
.github/workflows/: cargo_publish.yml  count_tests.yml
src/: lib.rs
src/components/: get_opt.rs  import.rs  mod.rs  prelude.rs
src/components/cipher/: aes_256_gcm_siv.rs  app.rs  argon2.rs  chacha20_poly1305.rs  field_methods.rs  import.rs  mod.rs  prelude.rs
src/components/helpers/: add_traits_to_generics.rs  for_extend_token_stream.rs  generate_parse_struct.rs  generics_split_for_impl.rs  get_attr.rs  get_attributes.rs  get_data_struct.rs  get_fields.rs  get_function_args.rs  get_function_signature.rs  get_impl.rs  get_named_fields.rs  get_struct_name.rs  get_type_path.rs  import.rs  is_async_fn.rs  is_function.rs  is_hashmap.rs  is_hashset.rs  is_numeric.rs  is_str_ref.rs  is_string.rs  is_tuple.rs  is_vec.rs  mod.rs  new_ident.rs  new_ident_camel_case.rs  prelude.rs
src/components/math/: app.rs  approach.rs  discount.rs  div.rs  import.rs  inflate.rs  mod.rs  mul.rs  prelude.rs  sub.rs  sum.rs
src/components/parser/: app.rs  import.rs  mod.rs
src/components/print/: by_field.rs  import.rs  method.rs  mod.rs  prelude.rs
src/components/search/: app.rs  cosine.rs  damerau_levenshtein.rs  field_methods.rs  import.rs  jaccard.rs  jaro.rs  lcs.rs  mod.rs  prelude.rs
src/components/sql/: app.rs  import.rs  prelude.rs
tests/: builder.rs  cipher.rs  math.rs  parser.rs  print.rs  search.rs  sql.rs
